<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:id="@+id/imageView0"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/screen"
        android:contentDescription="@string/image_view_description"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0" />

    <ImageButton
        android:id="@+id/pdfButton"
        android:layout_width="64dp"
        android:layout_height="58dp"
        android:layout_margin="16dp"
        android:layout_marginStart="12dp"
        android:layout_marginTop="8dp"
        app:srcCompat="@drawable/ques"
        android:background="@android:color/transparent"
        android:contentDescription="@string/ques_button_description"
        android:scaleType="fitCenter"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/CGPA"
        android:layout_width="280dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="208dp"
        android:hint="@string/hint_CGPA"
        android:inputType="text"
        android:maxLines="1"
        android:padding="16dp"
        app:layout_constraintBottom_toTopOf="@+id/Profile_Score"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.294" />

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/IQ"
        android:layout_width="280dp"
        android:layout_height="wrap_content"
        android:hint="@string/hint_IQ"
        android:padding="16dp"
        android:maxLines="1"
        android:inputType="text"
        app:layout_constraintBottom_toTopOf="@+id/Profile_Score"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/CGPA" />


    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/Profile_Score"
        android:layout_width="280dp"
        android:layout_height="wrap_content"
        android:hint="@string/hint_Profile_Score"
        android:inputType="text"
        android:maxLines="1"
        android:padding="16dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.462" />

    <ImageButton
        android:id="@+id/imageButton"
        android:layout_width="326dp"
        android:layout_height="69dp"
        android:layout_marginTop="64dp"
        android:background="@android:color/transparent"
        android:contentDescription="@string/image_button_description"
        android:scaleType="fitCenter"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Profile_Score"
        app:layout_constraintVertical_bias="0.0"
        app:srcCompat="@drawable/button" />

</androidx.constraintlayout.widget.ConstraintLayout>



